--- a/styles.css
+++ b/styles.css
@@ -24,14 +24,15 @@
 body {
     font-family: 'Noto Sans SC', sans-serif;
     background-color: #f8f9fa;
-    background-image: url('images/ribbon-pattern.svg');
+    /* 移除背景图片引用，使用类选择器控制背景 */
+    /* background-image: url('images/ribbon-pattern.svg');
     background-repeat: repeat;
-    background-size: 100px 100px;
+    background-size: 100px 100px; */
     min-height: 100vh;
     display: flex;
     flex-direction: column;
     padding: 0;
-    color: var(--text-dark);
+    color: #333;
     margin: 0;
     position: relative;
     width: 100%;
@@ -1243,9 +1244,10 @@ select:focus {
 body {
     font-family: 'Noto Sans SC', sans-serif;
     background-color: #f8f9fa;
-    background-image: url('images/ribbon-pattern.svg');
+    /* 移除背景图片引用，使用类选择器控制背景 */
+    /* background-image: url('images/ribbon-pattern.svg');
     background-repeat: repeat;
-    background-size: 100px 100px;
+    background-size: 100px 100px; */
     min-height: 100vh;
     display: flex;
     flex-direction: column;
@@ -1895,9 +1897,62 @@ body {
 /* 添加背景样式选项 */
 .bg-ribbon {
     background-color: #f8f9fa;
-    background-image: url('images/ribbon-pattern.svg');
-    background-repeat: repeat;
-    background-size: 300px 300px;
+    /* 不再使用SVG背景图案 */
+    /* background-image: url('images/ribbon-pattern.svg'); */
+    
+    /* 直接使用JPG图片创建多个背景图像，并调整不透明度 */
+    background-image: 
+        linear-gradient(rgba(255, 255, 255, 0.65), rgba(255, 255, 255, 0.65)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.80), rgba(255, 255, 255, 0.80)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.80), rgba(255, 255, 255, 0.80)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.80), rgba(255, 255, 255, 0.80)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.80), rgba(255, 255, 255, 0.80)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.90), rgba(255, 255, 255, 0.90)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.90), rgba(255, 255, 255, 0.90)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.90), rgba(255, 255, 255, 0.90)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.90), rgba(255, 255, 255, 0.90)), url('images/Red_Ribbon.jpg'),
+        /* 添加更多位置的图案 */
+        linear-gradient(rgba(255, 255, 255, 0.92), rgba(255, 255, 255, 0.92)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.92), rgba(255, 255, 255, 0.92)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.92), rgba(255, 255, 255, 0.92)), url('images/Red_Ribbon.jpg'),
+        linear-gradient(rgba(255, 255, 255, 0.92), rgba(255, 255, 255, 0.92)), url('images/Red_Ribbon.jpg');
+    
+    /* 设置不同大小的背景图像 */
+    background-size: 
+        120px 120px, 120px 120px, /* 中央大图 */
+        65px 65px, 65px 65px,     /* 角落中等大小图案 */
+        65px 65px, 65px 65px, 
+        65px 65px, 65px 65px,
+        35px 35px, 35px 35px,     /* 小图案 */
+        35px 35px, 35px 35px,
+        35px 35px, 35px 35px,
+        35px 35px, 35px 35px,
+        35px 35px, 35px 35px,
+        /* 添加的新图案大小 */
+        25px 25px, 25px 25px,
+        25px 25px, 25px 25px,
+        25px 25px, 25px 25px,
+        25px 25px, 25px 25px;
+    
+    /* 设置背景图像位置，使其分布在页面不同位置 */
+    background-position: 
+        center center, center center,  /* 中央大图 */
+        10% 10%, 10% 10%,       /* 左上角 */
+        90% 10%, 90% 10%,       /* 右上角 */
+        10% 90%, 10% 90%,       /* 左下角 */
+        90% 90%, 90% 90%,       /* 右下角 */
+        30% 30%, 30% 30%,       /* 小图案分布 */
+        70% 30%, 70% 30%,
+        30% 70%, 30% 70%,
+        70% 70%, 70% 70%,
+        /* 添加的新图案位置 */
+        20% 50%, 20% 50%,
+        50% 20%, 50% 20%,
+        80% 50%, 80% 50%,
+        50% 80%, 50% 80%;
+    
+    /* 设置背景不重复 */
+    background-repeat: no-repeat;
 }
 
 .bg-medical {
